getting there with vectorization